fortsatt med länkar mellan sidorna

--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -8,6 +8,14 @@
 	<body>
 		<h1>Min första sida!</h1>
 		
+		 <ul>
+                <li><a href="../index.html">Start</a></li>
+                <li><a href="laborationer.html">Laborationer</a></li>
+                <li><a href="presentation.html">Presentation</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
+             
+            </ul>
+		
 		<h2>Här kommer en liten presentation av mig själv.</h2>
 		
 		<p> Jag heter Andreas C Eriksson och kommer från en Vaxholm, en liten stad strax utanför Stockholm.Där bor jag med min flickvän och hund i ett litet rött hus med vita knutar.</p>
@@ -54,8 +62,6 @@
 					<li>Bagare</li>
 				</ul>
 			
-				
-		
 		<h3>Vad jag vill få ut av min utbildning</h3>
 		
 		<p>Några av dom saker jag vill ha bra kunskap i och senare skulle vilja arbeta med är</p>
