lagt till externa länkar

--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -61,6 +61,14 @@
 					<li>Servitör</li>
 					<li>Bagare</li>
 				</ul>
+				
+		<h4>Vill ni veta lite mer om mina intressen kommer här några länkar till andra sidor som handlar om dessa</h4>
+		
+		<dl>
+		    <dt><a href="http://sv.wikipedia.org/wiki/Bowling">Bowling-Wikipedia</a></dt>
+		    <dt><a href="http://sv.wikipedia.org/wiki/Poker">Poker-Wikipedia</a></dt>
+		    <dt><a href="http://fiskejournalen.se/">Fiskejournalen</a></dt>
+		</dl>
 			
 		<h3>Vad jag vill få ut av min utbildning</h3>
 		
