lagt till bilder och länkar

--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -20,6 +20,12 @@
 		
 		<p> Jag heter Andreas C Eriksson och kommer från en Vaxholm, en liten stad strax utanför Stockholm.Där bor jag med min flickvän och hund i ett litet rött hus med vita knutar.</p>
 
+		
+		
+		 <a name="jag1"><img src="../pics/jag.jpg" width="130" height="130" alt="Bilden kan inte visas" title="Det här är jag!" /></a>
+		
+		
+		
 		<p>På den här sidan kommer jag ta upp lite saker om mig själv. Det är en första uppgift i kursen webteknisk-introduktion.</p>
 		<p>Jag kommer använda mig av några frågeställningar som angavs i exemplet.</p>
 		
